--- a/bower.json
+++ b/bower.json
@@ -10,9 +10,9 @@
   ],
   "license": "https://opensource.org/licenses/BSD-2-Clause",
   "keywords": [
-    "responsive",
-    "resize",
-    "callback"
+    "move",
+    "autoreplace",
+    "dom"
   ],
   "homepage": "https://github.com/EdouardDem/djs-mover",
   "moduleType": [
